syntax = "proto3";

option java_multiple_files = true;
option java_package = "dev.restate.sdk.testing.testservices";
option java_outer_classname = "AwakeServiceProto";

import "dev/restate/ext.proto";
import "google/protobuf/empty.proto";

package test;

service AwakeService {
  option (dev.restate.ext.service_type) = UNKEYED;

  rpc Awake (AwakeServiceRequest) returns (google.protobuf.Empty);
}

message AwakeServiceRequest {
  string service_name = 1;
  bytes instance_key = 2;
  bytes invocation_id = 3;
  uint32 entry_index = 4;
}